[package]
name = "s3s-fs"
version = "0.12.0-dev"
description = "A simple S3-compatible object storage for learning"
readme = "README.md"
keywords = ["s3"]
categories = ["web-programming", "web-programming::http-server"]
edition.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[[bin]]
name = "s3s-fs"
required-features = ["binary"]

[features]
binary = ["tokio/full", "dep:clap", "dep:tracing-subscriber", "dep:hyper-util"]

[dependencies]
async-trait = "0.1.88"
camino = "1.1.9"
tracing = "0.1.41"

[dependencies.s3s]
git = "https://github.com/Nugine/s3s.git"
branch = "feat/s3s-fs-v2"

[dependencies.tokio]
version = "1.44.2"

[dependencies.clap]
version = "4.5.32"
optional = true
features = ["derive"]

[dependencies.hyper-util]
version = "0.1.11"
optional = true
features = ["server-auto", "server-graceful", "http1", "http2", "tokio"]

[dependencies.tracing-subscriber]
version = "0.3.19"
optional = true
features = ["env-filter", "time"]
