[package]
name = "s3s-fs"
version = "0.12.0-dev"
description = "A simple S3-compatible object storage for learning"
readme = "README.md"
keywords = ["s3"]
categories = ["web-programming", "web-programming::http-server"]
edition.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[[bin]]
name = "s3s-fs"
required-features = ["binary"]

[features]
binary = ["tokio/full", "dep:clap", "dep:tracing-subscriber", "dep:hyper-util", "dep:tikv-jemallocator"]

[dependencies]
async-trait = "0.1.89"
camino = "1.2.1"
tracing = "0.1.43"

[dependencies.s3s]
git = "https://github.com/Nugine/s3s.git"
branch = "main"

[dependencies.tokio]
version = "1.48.0"

[dependencies.clap]
version = "4.5.53"
optional = true
features = ["derive"]

[dependencies.hyper-util]
version = "0.1.18"
optional = true
features = ["server-auto", "server-graceful", "http1", "http2", "tokio"]

[dependencies.tracing-subscriber]
version = "0.3.22"
optional = true
features = ["env-filter", "time"]

[target.'cfg(all(target_os="linux", target_env="gnu"))'.dependencies]
tikv-jemallocator = { version = "0.6", optional = true }
